# mcp2221-hal

./: Cargo.toml  Makefile  README.md  todo.md  voltage-ref-query.md
.config/: nextest.toml
.github/workflows/: cli-release.yml
mcp2221-cli/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
mcp2221-cli/doc/: mcp2221-cli.1  mcp2221-cli.1.md
mcp2221-cli/src/: analog.rs  cli.rs  i2c.rs  main.rs  pins.rs  settings.rs  usb.rs  util.rs
mcp2221-cli/src/pins/: mod.rs  modes.rs  values.rs
mcp2221-hal/: CHANGELOG.md  Cargo.toml  README.md
mcp2221-hal/examples/: scan_bus.rs  sht4x.rs
mcp2221-hal/src/: analog.rs  chip_settings.rs  commands.rs  common.rs  driver.rs  error.rs  flash_data.rs  i2c.rs  lib.rs  security.rs  sram.rs  status.rs
mcp2221-hal/src/driver/: analog.rs  flash.rs  gpio.rs  i2c.rs  i2c_eh.rs  mod.rs  sram.rs  usb.rs
mcp2221-hal/src/eh/: async_i2c.rs  blocking_i2c.rs  mod.rs
mcp2221-hal/src/flash_data/: chip_settings.rs  mod.rs
mcp2221-hal/src/gpio/: common.rs  mod.rs  pins.rs  settings.rs  values.rs
mcp2221-hal/src/settings/: chip_settings.rs  common.rs  gp.rs  gpio.rs  mod.rs  security.rs  sram.rs
mcp2221-hal/src/sram/: mod.rs
mcp2221-hal/tests/: pico.rs
pico-explorer-base/: Cargo.toml
pico-explorer-base/.cargo/: config.toml
pico-explorer-base/src/: lib.rs  screen.rs
pico-target/: Cargo.toml  README.md  rust-toolchain.toml
pico-target/.cargo/: config.toml
pico-target/src/: main.rs  signals.rs
pico-target/src/explorer/: buttons.rs  mod.rs  screen.rs
pico-target/src/explorer_base/: mod.rs  screen.rs
pico-target/src/tasks/: adc.rs  display.rs  i2c.rs  mod.rs  pin.rs  uart.rs
reference/java/com/microchip/android/mcp2221comm/: Mcp2221Comm.java  Mcp2221Config.java  Mcp2221Constants.java
src/: analog.rs  commands.rs  common.rs  driver.rs  error.rs  flash_data.rs  i2c.rs  lib.rs  main.rs  status.rs  types.rs
src/flash_data/: chip_settings.rs  common.rs  gp.rs  mod.rs
src/gpio/: common.rs  settings.rs
src/sram/: mod.rs
