[package]
name = "mcp2221-hal"
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"
description = "Driver for the MCP2221 USB to UART, I2C and GPIO converter"
readme = "README.md"
repository = "https://github.com/robjwells/mcp2221-hal/"
license = "MIT OR Apache-2.0"
keywords = ["hal", "embedded", "embedded-hal"]
categories = ["embedded", "hardware-support"]
exclude = ["assets/"]

[features]
async = ["dep:embedded-hal-async"]

[dependencies]
bit_field = "0.10.2"
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
hidapi = "2.6.3"
