[package]
name = "pico-explorer-base"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = "0.3"
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-rp = { version = "0.4.0", features = ["critical-section-impl", "defmt", "rp2040", "time-driver", "unstable-pac"] }
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
mipidsi = { version = "0.9.0" }
static_cell = "2.1.0"
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
